--- a/EwidOperaty/EwidOperaty.csproj
+++ b/EwidOperaty/EwidOperaty.csproj
@@ -39,9 +39,6 @@
     <ApplicationIcon>Resources\ikona.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EPPlus, Version=5.1.2.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
-      <HintPath>..\packages\EPPlus.5.1.2\lib\net45\EPPlus.dll</HintPath>
-    </Reference>
     <Reference Include="INIFileParser, Version=2.5.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
       <HintPath>..\packages\ini-parser.2.5.2\lib\net20\INIFileParser.dll</HintPath>
     </Reference>
@@ -195,6 +192,12 @@
     <EmbeddedResource Include="Oracle\SqlResource\PzgZgloszenieBezZakres.sql" />
     <EmbeddedResource Include="Oracle\SqlResource\PzgZgloszenieZakres.sql" />
     <Content Include="Oracle\SqlResource\ToolsLiczbaSkanow.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\EPPlus\EPPlus\EPPlus.csproj">
+      <Project>{be4a6343-f411-44a3-8d6f-f40747ed7ba5}</Project>
+      <Name>EPPlus</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\..\License Generator\License\License.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
